--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ font-size:24px:
 <h4 id="top-info">top info</h4>
   <h3>Grun-Gold is a ballroom-dance club.</h3>
   
-  This club is in Berlin. In the year 2017 in the club was a lot of dancers, but now the club needs more dancers. The latin trainer is <a id="elena" href="https://www.youtube.com/watch?v=iW9UURNk-Jg>Elena Zverevshekova</a>.</h3>
+  <p>This club is in Berlin. In the year 2017 in the club was a lot of dancers, but now the club needs more dancers. The latin trainer is <a id="elena" href="https://www.youtube.com/watch?v=iW9UURNk-Jg>Elena Zverevshekova</a>.</p>
 <a href="https://tib1848ev.de/sportarten/tanzsport/"> You can find more info here!!!</a>
 </body>
 </html>
