--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@ font-size:24px:
 <body>
 <h1 id="grun-gold">Grun-Gold</h1>
 <h4 id="top-info">top info</h4>
-  <h3>Grun-Gold is a ballroom-dance club.</h3>
-  
-  <p>This club is in Berlin. In the year 2017 in the club was a lot of dancers, but now the club needs more dancers. The latin trainer is <a id="elena" href="https://www.youtube.com/watch?v=iW9UURNk-Jg>Elena Zverevshekova</a>.</p>
-<a href="https://tib1848ev.de/sportarten/tanzsport/"> You can find more info here!!!</a>
+  <h4>Grun-Gold is a ballroom-dance club. This club is in Berlin. In the year 2017 in the club was a lot of dancers, but now the club needs more dancers. The latin trainer is <a id="elena" href="https://www.youtube.com/watch?v=iW9UURNk-Jg>Elena Zverevshekova</a>.</h4>
 </body>
 </html>
