--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@ font-size:24px:
 <h1 id="grun-gold">Grun-Gold</h1>
 <h4 id="top-info">top info</h4>
   <h4>Grun-Gold is a ballroom-dance club. This club is in Berlin. In the year 2017 in the club was a lot of dancers, but now the club needs more dancers. The latin trainer is Elena Zverevshekova.</h4>
+  <a href="https://tib1848ev.de/sportarten/tanzsport/">Here you can find more info about the club</a>
+  <a href="https://www.youtube.com/watch?v=iW9UURNk-Jg">This is an example how Elena Zverevshekova is dancing</a>
 </body>
 </html>
