--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@ color:gold;
 font-family:cursive:
 font-size:24px:
 }
+ #Grun-Gold {
+   font-size:24px;
+   font-family:cursive;
+  }
 </style>
 </head>
 <body>
 <h1 id="grun-gold">Grun-Gold</h1>
 <h4 id="top-info">top info</h4>
-  <h4>Grun-Gold is a ballroom-dance club. This club is in Berlin.
+  <h4 id="Grun-Gold">Grun-Gold is a ballroom-dance club. This club is in Berlin.
   In the year 2017 in the club was a lot of dancers, but now the club needs more dancers.
   The latin trainer is Elena Zverevshekova.</h4>
 <li>
