--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@ font-size:24px:
    font-size:24px;
    font-family:cursive;
   }
+ #More-Info {
+  font-size:25px;
+  color:green;
+ }
 </style>
 </head>
 <body>
@@ -34,7 +38,7 @@ font-size:24px:
   In the year 2017 in the club was a lot of dancers, but now the club needs more dancers.
   The latin trainer is Elena Zverevshekova.</h4>
 <li>
-  <a href="https://tib1848ev.de/sportarten/tanzsport/">Here you can find more info about the club</a>
+  <a id="More-Info" href="https://tib1848ev.de/sportarten/tanzsport/">Here you can find more info about the club</a>
 </li>
 <li>
   <a href="https://www.youtube.com/watch?v=iW9UURNk-Jg">This is an example how Elena Zverevshekova is dancing</a>
