--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ font-size:24px:
   <a id="More-Info" href="https://tib1848ev.de/sportarten/tanzsport/">Here you can find more info about the club</a>
 </li>
 <li>
-  <a ide="Elena"href="https://www.youtube.com/watch?v=iW9UURNk-Jg">This is an example how Elena Zverevshekova is dancing</a>
+  <a id="Elena"href="https://www.youtube.com/watch?v=iW9UURNk-Jg">This is an example how Elena Zverevshekova is dancing</a>
 </li>
 </body>
 </html>
