--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@ font-size:24px:
 <li>
   <a id="Elena"href="https://www.youtube.com/watch?v=iW9UURNk-Jg">This is an example how Elena Zverevshekova is dancing</a>
 </li>
- 
- 
+ <p> If you want you can look another two sites here</p>
  <li>
  <a href="https://daniilgrachev.github.io/The-Game/index.html">Here one site that I made!!! </a>
  </li>
