--- a/index.html
+++ b/index.html
@@ -49,12 +49,15 @@ font-size:24px:
 <li>
   <a id="Elena"href="https://www.youtube.com/watch?v=iW9UURNk-Jg">This is an example how Elena Zverevshekova is dancing</a>
 </li>
- <p> If you want you can look another two sites here</p>
+ <p> Jump to:
+  <a href="#My-site">My site</a>
+  <a href="My-,,sisters''-site">My ,,sisters'' site</a>
+ </p>
  <li>
- <a href="https://daniilgrachev.github.io/The-Game/index.html">Here one site that I made!!! </a>
+ <a id="My-site" href="https://daniilgrachev.github.io/The-Game/index.html">Here one site that I made!!! </a>
  </li>
  <li>
-  <a href="https://gloria2009.github.io/Gloria-and-Daniil/index.html">Here is anothr site that my ,, sister '' made!!! </a>
+  <a id="My-,,sisters''-site"href="https://gloria2009.github.io/Gloria-and-Daniil/index.html">Here is anothr site that my ,, sister '' made!!! </a>
  </li>
  </body>
 </html>
