--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@ font-size:24px:
 <li>
   <a id="Elena"href="https://www.youtube.com/watch?v=iW9UURNk-Jg">This is an example how Elena Zverevshekova is dancing</a>
 </li>
- <p> Jump to:
-  <a href="#My-site">My site</a>
-  <a href="My-,,sisters''-site">My ,,sisters'' site</a>
- </p>
+ <p> Here you can find another two sites</p>
  <li>
  <a id="My-site" href="https://daniilgrachev.github.io/The-Game/index.html">Here one site that I made!!! </a>
  </li>
