--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@ font-size:24px:
   color:orange;
   font-family:serif;
  }
+ #My-site {
+  font-size:20px;
+  color:yellow;
+ }
+ #My-,,sisters''-site {
+  font-size:20px;
+  color:blue;
+ }
 </style>
 </head>
 <body>
