--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ font-size:24px:
   font-size:20px;
   color:red;
  }
- #My-,,sisters''-site {
+ #My-sisters-site {
   font-size:20px;
   color:blue;
  }
@@ -62,7 +62,7 @@ font-size:24px:
  <a id="My-site" href="https://daniilgrachev.github.io/The-Game/index.html">Here one site that I made!!! </a>
  </li>
  <li>
-  <a id="My-,,sisters''-site"href="https://gloria2009.github.io/Gloria-and-Daniil/index.html">Here is anothr site that my ,, sister '' made!!! </a>
+  <a id="My-sisters-site"href="https://gloria2009.github.io/Gloria-and-Daniil/index.html">Here is anothr site that my ,, sister '' made!!! </a>
  </li>
  </body>
 </html>
