--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ font-size:24px:
  <a id="My-site" href="https://daniilgrachev.github.io/The-Game/index.html">Here one site that I made!!! </a>
  </li>
  <li>
-  <a id="My-sisters-site"href="https://gloria2009.github.io/Gloria-and-Daniil/index.html">Here is anothr site that my ,, sister '' made!!! </a>
+  <a id="My-sisters-site"href="https://gloria2009.github.io/Gloria-and-Daniil/index.html">Here is another site made by my ,,sister''!!! </a>
  </li>
  </body>
 </html>
