--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ font-size:24px:
 <h1 id="grun-gold">Grun-Gold</h1>
 <h4 id="top-info">top info</h4>
   <h4 id="Grun-Gold">Grun-Gold is a ballroom-dance club. This club is in Berlin.
-  In the year 2017 in the club was a lot of dancers, but now the club needs more dancers.
+  In 2017 year there were a lot of dancers in this club, but now the club is auditioning for more dancers.
   The latin trainer is Elena Zverevshekova.</h4>
 <li>
   <a id="More-Info" href="https://tib1848ev.de/sportarten/tanzsport/">Here you can find more info about the club</a>
