--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@ font-size:24px:
  <li>
   <a id="My-sisters-site"href="https://gloria2009.github.io/Gloria-and-Daniil/index.html">Here is another site made by my ,,sister''!!! </a>
  </li>
- <img src="dg1.jpeg">
+ <img src="/dg1.jpeg">
  </body>
 </html>
